--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "next": "14.2.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.5"
