signing in good

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "nookies": "^2.5.2",
     "react": "^18",
