--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "nookies": "^2.5.2",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.5"
